--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,14 @@
 <div class="column gap-1">
     <!-- Add Product Button -->
     <button
-      type="button"
-      pButton
-      icon="pi pi-plus"
-      (click)="toggleAddPopup()"
-      label="Add Product"
-      class="add-product-btn"
-    ></button>
+    *ngIf="authService.isAdmin()"
+    type="button"
+    pButton
+    icon="pi pi-plus"
+    (click)="toggleAddPopup()"
+    label="Add Product"
+    class="add-product-btn"
+  ></button>
   
     <!-- Products Section -->
     <div class="row wrap gap-2 space-between">
