--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,15 +1,11 @@
 <header class="wrapper row full-center">
-    <!-- Logo image -->
-    <img src="images/oc-logo.svg" alt="Logo image" class="logo" />
-  
-    <!-- Navigation -->
-    <div class="row gap-1">
-      <a
-        routerLink="/"
-        routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
-        >Home</a
-      >
+  <img src="images/oc-logo.svg" alt="Logo image" class="logo" />
+
+  <div class="row gap-1">
+    <ng-container *ngIf="authService.isLoggedIn()">
+      <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
       <a routerLink="/about-us" routerLinkActive="active">About</a>
-    </div>
-  </header>
+      <button pButton type="button" (click)="authService.logout()">Logout</button>
+    </ng-container>
+  </div>
+</header>
